Revert "migrate-event-channel-to-virtualthreads"
This reverts commit 550e7c2e8f93b7989bac84bf5f16f1c0d0190024.